--- a/bio.css
+++ b/bio.css
@@ -73,9 +73,14 @@ aside h1 {
 	margin-bottom: 25px;
 }
 
-footer {
+.icones-sociais li {
+	display: inline-block;
+}
+
+#rodape-pagina {
 	background-color: #000;
 	color: #F2FFFC;
+	padding: 20px;
 }
 
 nav a {
@@ -92,3 +97,18 @@ nav a {
 	width: 0;
 }
 */
+
+article {
+	padding-bottom: 20px;
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 20px;
+}
+
+.leia-mais {
+	padding: 8px;
+	margin: 16px;
+	display: block;
+	font-size: 24px;
+	text-align: center;
+	background-color: #E6E7E8;
+}
