--- a/assets/stylesheets/bio.css
+++ b/assets/stylesheets/bio.css
@@ -192,3 +192,20 @@ article {
 	text-align: center;
 	background-color: #E6E7E8;
 }
+
+/* portifolio styles */
+
+.portifolio li {
+	border: 8px solid black;
+	background-color: #FAFFFC;
+	padding: 16px;
+	margin-right: 16px;
+	margin-bottom: 16px;
+	box-sizing: border-box;
+	width: 45%;
+	display: inline-block;
+}
+
+.portifolio img {
+	width: 100%;
+}
